--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.8/angular.min.js"></script>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-    <script src="js/players.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/services.js"></script>
+    <script src="js/controllers.js"></script>
   </head>
   <body ng-controller="playersController">
     <table class="table table-striped">
@@ -22,7 +24,7 @@
           <td>{{$index+1}}</td>
           <td>{{player.summonerName}}</td>
           <td>{{player.points}}</td>
-          <td><img ng-src="{{player.img}}" /></td>
+          <td><img ng-src="{{player.imgURL}}" /></td>
         </tr>
       </tbody>
     </table>
