--- a/index.html
+++ b/index.html
@@ -4,19 +4,24 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.8/angular.min.js"></script>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-    <script src="js/app.js"></script>
-    <script src="js/services.js"></script>
     <script src="js/controllers.js"></script>
   </head>
   <body ng-controller="playersController">
-    <table class="table table-striped">
+    <div class="container">
+
+    <center> 
+      <h1> Challenger, Division 1 </h1>
+      <img src="img/challenger_icon.png" />
+    </center>
+
+    <table class="table table-striped table-bordered">
       <thead>
         <tr>
           <th>Rank</th>
-          <th>Summoner Name</th>
-          <th>Points</th>
+          <th>Summoner</th>
           <th>Wins</th>
           <th>Losses</th>
+          <th>Points</th>
         </tr>
       </thead>
 
@@ -24,12 +29,13 @@
         <tr ng-repeat="player in players | orderBy:orderProp">
           <td>{{$index+1}}</td>
           <td>{{player.playerOrTeamName}}</td>
+          <td id= "wins">{{player.wins}}</td>
+          <td id= "losses">{{player.losses}}</td>
           <td>{{player.leaguePoints}}</td>
-          <td>{{player.wins}}</td>
-          <td>{{player.losses}}</td>
         </tr>
       </tbody>
     </table>
+  </div>
   </body>
 
   </html>
