--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </thead>
 
       <tbody>
-        <tr ng-repeat="player in players | orderBy:orderProp">
+        <tr ng-repeat="player in players | orderBy:orderProp | limitTo:50">
           <td>{{$index+1}}</td>
           <td>{{player.playerOrTeamName}}</td>
           <td id="wins">{{player.wins}}</td>
