--- a/index.html
+++ b/index.html
@@ -1,41 +1,42 @@
 <!doctype html>
 <html ng-app = "leaderboardApp">
   <head>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.8/angular.min.js"></script>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-    <script src="js/controllers.js"></script>
   </head>
-  <body ng-controller="playersController">
+  
+  <body ng-controller="leagueController">
     <div class="container">
+      <div class="head">
+        <h1> Challenger, Division 1 </h1>
+        <img src="img/challenger_icon.png" />
+        <input type="search" ng-model="search" placeholder="Search...">
+      </div>
 
-    <center> 
-      <h1> Challenger, Division 1 </h1>
-      <img src="img/challenger_icon.png" />
-    </center>
+      <table class="table table-striped table-bordered">
+        <thead>
+          <tr>
+            <th>Rank</th>
+            <th>Player name</th>
+            <th>Wins</th>
+            <th>Losses</th>
+            <th>Points</th>
+          </tr>
+        </thead>
 
-    <table class="table table-striped table-bordered">
-      <thead>
-        <tr>
-          <th>Rank</th>
-          <th>Summoner</th>
-          <th>Wins</th>
-          <th>Losses</th>
-          <th>Points</th>
-        </tr>
-      </thead>
-
-      <tbody>
-        <tr ng-repeat="player in players | orderBy:orderProp | limitTo:50">
-          <td>{{$index+1}}</td>
-          <td>{{player.playerOrTeamName}}</td>
-          <td id="wins">{{player.wins}}</td>
-          <td id="losses">{{player.losses}}</td>
-          <td>{{player.leaguePoints}}</td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
+        <tbody>
+          <tr ng-repeat="player in players | orderBy:orderProp | filter:search | limitTo:50">
+            <td>{{$index+1}}</td>
+            <td>{{player.playerOrTeamName}}</td>
+            <td id="wins">{{player.wins}}</td>
+            <td id="losses">{{player.losses}}</td>
+            <td>{{player.leaguePoints}}</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.8/angular.min.js"></script>
+    <script src="js/controllers.js"></script>
   </body>
-
-  </html>
+</html>
