modified search bar

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <div class="head">
         <h1> Challenger, Division 1 </h1>
         <img src="img/challenger_icon.png" />
-        <input type="search" ng-model="search" placeholder="Search...">
+        <input type="search" ng-model="search" placeholder="Search player here">
       </div>
 
       <table class="table table-striped table-bordered">
