--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   
-  <body ng-controller="leagueController">
+  <body ng-controller="playerCtrl">
     <div class="container">
       <div class="head">
         <h1> Challenger, Division 1 </h1>
