separte service and controller. So each module has a single responsibilty

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<link href="css/style.css" rel="stylesheet">
 	</head>
 	
-	<body ng-controller="playerCtrl">
+	<body ng-controller="PlayerCtrl">
 		<div class="container">
 			<div class="head">
 				<h1> Challenger, Division 1 </h1>
@@ -37,6 +37,7 @@
 		</div>
 		
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
-		<script src="js/controllers.js"></script>
+		<script src="js/controller.js"></script>
+		<script src="js/service.js"></script>
 	</body>
 </html>
