--- a/index.html
+++ b/index.html
@@ -7,34 +7,37 @@
 	
 	<body ng-controller="PlayerCtrl">
 		<div class="container">
-			<div class="head">
-				<h1> Challenger, Division 1 </h1>
-				<img src="img/challenger_icon.png" />
-				<input type="search" ng-model="search" placeholder="Search player here">
+			<div class="row">
+				<div class="col-md-3">
+					<h1> Leaderboard </h1>
+					<img src="img/challenger_icon.png" />
+					<input type="search" ng-model="search" placeholder="Search player">
+					<h3> Sort by: </h3>
+				</div>
+				<div class="col-md-9">
+					<table class="table table-striped table-bordered">
+						<thead>
+							<tr>
+								<th>Rank</th>
+								<th>Player name</th>
+								<th>Wins</th>
+								<th>Losses</th>
+								<th>Points</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr ng-repeat="player in players | orderBy:orderProp | filter:search | limitTo:50">
+								<td>{{$index+1}}</td>
+								<td>{{player.playerOrTeamName}}</td>
+								<td id="wins">{{player.wins}}</td>
+								<td id="losses">{{player.losses}}</td>
+								<td>{{player.leaguePoints}}</td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
 			</div>
-
-			<table class="table table-striped table-bordered">
-				<thead>
-					<tr>
-						<th>Rank</th>
-						<th>Player name</th>
-						<th>Wins</th>
-						<th>Losses</th>
-						<th>Points</th>
-					</tr>
-				</thead>
-
-				<tbody>
-					<tr ng-repeat="player in players | orderBy:orderProp | filter:search | limitTo:50">
-						<td>{{$index+1}}</td>
-						<td>{{player.playerOrTeamName}}</td>
-						<td id="wins">{{player.wins}}</td>
-						<td id="losses">{{player.losses}}</td>
-						<td>{{player.leaguePoints}}</td>
-					</tr>
-				</tbody>
-			</table>
-		</div>
+	</div>
 		
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
 		<script src="js/controller.js"></script>
