--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
 					<h1> Leaderboard </h1>
 					<img src="img/challenger_icon.png" />
 					<input type="search" ng-model="search" placeholder="Search player">
-					<h3> Sort by: </h3>
+					<h4> Sort by: </h4>
+					<select ng-model="orderProp">
+  					<option value="-leaguePoints">Points</option>
+						<option value="-wins">Wins</option>
+						<option value="-losses">Losses</option>
+						<option value="playerOrTeamName">Player name</option>
+					</select>
 				</div>
 				<div class="col-md-9">
 					<table class="table table-striped table-bordered">
