added mock json, move html into app

--- a/app/index.html
+++ b/app/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html ng-app="leaderboardApp">
 	<head>
-		<link href="app/css/bootstrap.min.css" rel="stylesheet">
-		<link href="app/css/style.css" rel="stylesheet">
+		<link href="css/bootstrap.min.css" rel="stylesheet">
+		<link href="css/style.css" rel="stylesheet">
 	</head>
 	
 	<body ng-controller="PlayerCtrl">
@@ -10,7 +10,7 @@
 			<div class="row">
 				<div class="col-md-3">
 					<h1> Leaderboard </h1>
-					<img src="app/img/challenger_icon.png"/>
+					<img src="img/challenger_icon.png"/>
 					<input type="search" ng-model="search" placeholder="Search player">
 					<h4> Sort by: </h4>
 					<select ng-model="orderProp">
@@ -46,7 +46,7 @@
 	</div>
 		
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
-		<script src="app/js/controller.js"></script>
-		<script src="app/js/service.js"></script>
+		<script src="js/controller.js"></script>
+		<script src="js/service.js"></script>
 	</body>
 </html>
