--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,7 @@
                     <option value="playerOrTeamName">Player name</option>
                 </select>
             </div>
-            <div class="col-md-9">
+            <div class="col-md-9 table-wraper">
                 <table class="table table-striped table-bordered">
                     <thead>
                         <tr>
