--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,16 @@
     <link href="css/style.css" rel="stylesheet">
 </head>
 
+
+<ul class="nav nav-pills nav-justified">
+    <li class="active"><a href="#">Leaderboard</a></li>
+    <li><a href="#">Champions</a></li>
+    <li><a href="#">Items</a></li>
+    <li><a href="#">Masteries</a></li>
+</ul>
+
+
+
 <body ng-controller="PlayerCtrl">
     <div class="container">
         <div class="row">
@@ -46,7 +56,8 @@
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
-    <script src="js/controller.js"></script>
+    <script src="js/playerController.js"></script>
+    <!--<script src="js/championController.js"></script>-->
     <script src="js/service.js"></script>
 </body>
 </html>
