--- a/app/index.html
+++ b/app/index.html
@@ -5,59 +5,63 @@
     <link href="css/style.css" rel="stylesheet">
 </head>
 
-
-<ul class="nav nav-pills nav-justified">
-    <li class="active"><a href="#">Leaderboard</a></li>
-    <li><a href="#">Champions</a></li>
-    <li><a href="#">Items</a></li>
-    <li><a href="#">Masteries</a></li>
-</ul>
-
-
-
-<body ng-controller="PlayerCtrl">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-3">
-                <h1> Leaderboard </h1>
-                <img src="img/challenger_icon.png" />
-                <input type="search" ng-model="search" placeholder="Search player">
-                <h4> Sort by: </h4>
-                <select ng-model="orderProp">
-                    <option value="-leaguePoints">Points</option>
-                    <option value="-wins">Wins</option>
-                    <option value="-losses">Losses</option>
-                    <option value="playerOrTeamName">Player name</option>
-                </select>
-            </div>
-            <div class="col-md-9 table-wraper">
-                <table class="table table-striped table-bordered">
-                    <thead>
-                        <tr>
-                            <th>Rank</th>
-                            <th>Player name</th>
-                            <th>Wins</th>
-                            <th>Losses</th>
-                            <th>Points</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr ng-repeat="player in players | orderBy:orderProp | filter:search | limitTo:50">
-                            <td>{{$index+1}}</td>
-                            <td>{{player.playerOrTeamName}}</td>
-                            <td id="wins">{{player.wins}}</td>
-                            <td id="losses">{{player.losses}}</td>
-                            <td>{{player.leaguePoints}}</td>
-                        </tr>
-                    </tbody>
-                </table>
+<body ng-controller="TabCtrl as tab">
+    <div>
+        <ul class="nav nav-pills nav-justified">
+            <li ng-class="{ active: tab.tab == 1 }"><a href="#" ng-click="tab.setTab(1)">Leaderboard</a></li>
+            <li ng-class="{ active: tab.tab == 2 }"><a href="#" ng-click="tab.setTab(2)">Champions</a></li>
+            <li ng-class="{ active: tab.tab == 3 }"><a href="#" ng-click="tab.setTab(3)">Items</a></li>
+        </ul>
+    </div>
+    <div ng-controller="PlayerCtrl" ng-show="tab.tab == 1">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3">
+                    <h1> Leaderboard </h1>
+                    <img src="img/challenger_icon.png" />
+                    <input type="search" ng-model="search" placeholder="Search player">
+                    <h4> Sort by: </h4>
+                    <select ng-model="orderProp">
+                        <option value="-leaguePoints">Points</option>
+                        <option value="-wins">Wins</option>
+                        <option value="-losses">Losses</option>
+                        <option value="playerOrTeamName">Player name</option>
+                    </select>
+                </div>
+                <div class="col-md-9 table-wraper">
+                    <table class="table table-striped table-bordered">
+                        <thead>
+                            <tr>
+                                <th>Rank</th>
+                                <th>Player name</th>
+                                <th>Wins</th>
+                                <th>Losses</th>
+                                <th>Points</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr ng-repeat="player in players | orderBy:orderProp | filter:search | limitTo:50">
+                                <td>{{$index+1}}</td>
+                                <td>{{player.playerOrTeamName}}</td>
+                                <td id="wins">{{player.wins}}</td>
+                                <td id="losses">{{player.losses}}</td>
+                                <td>{{player.leaguePoints}}</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
+
+	  <script src="js/app.js"></script>
+    <script src="js/tabController.js"></script>
     <script src="js/playerController.js"></script>
     <!--<script src="js/championController.js"></script>-->
     <script src="js/service.js"></script>
+
 </body>
 </html>
+
