--- a/app/index.html
+++ b/app/index.html
@@ -8,12 +8,12 @@
 <body ng-controller="TabCtrl as tab">
     <div>
         <ul class="nav nav-pills nav-justified">
-            <li ng-class="{ active: tab.tab == 1 }"><a href="#" ng-click="tab.setTab(1)">Leaderboard</a></li>
-            <li ng-class="{ active: tab.tab == 2 }"><a href="#" ng-click="tab.setTab(2)">Champions</a></li>
-            <li ng-class="{ active: tab.tab == 3 }"><a href="#" ng-click="tab.setTab(3)">Items</a></li>
+            <li ng-class="{ active: tab.currentTab == 1 }"><a href="#" ng-click="tab.setTab(1)">Leaderboard</a></li>
+            <li ng-class="{ active: tab.currentTab == 2 }"><a href="#" ng-click="tab.setTab(2)">Champions</a></li>
+            <li ng-class="{ active: tab.currentTab == 3 }"><a href="#" ng-click="tab.setTab(3)">Items</a></li>
         </ul>
     </div>
-    <div ng-controller="PlayerCtrl" ng-show="tab.tab == 1">
+    <div ng-controller="PlayerCtrl" ng-show="tab.currentTab == 1">
         <div class="container">
             <div class="row">
                 <div class="col-md-3">
@@ -54,12 +54,21 @@
         </div>
     </div>
 
+		<div  ng-controller="ChampionCtrl as champion" ng-show="tab.currentTab == 2">
+        <div class="container"> 
+            <div class="champion-icon" ng-repeat="champion in champion.champions.data">
+                <img ng-src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/champion/{{champion.id}}.png " alt="champion" />
+            </div>
+        </div>
+		</div>
+	
+	
+	
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
-
 	  <script src="js/app.js"></script>
     <script src="js/tabController.js"></script>
     <script src="js/playerController.js"></script>
-    <!--<script src="js/championController.js"></script>-->
+    <script src="js/championController.js"></script>
     <script src="js/service.js"></script>
 
 </body>
