changed http request to https to avoid mixed content error

--- a/app/index.html
+++ b/app/index.html
@@ -57,7 +57,7 @@
 		<div  ng-controller="ChampionCtrl as champion" ng-show="tab.currentTab == 2">
         <div class="container"> 
             <div class="champion-icon" ng-repeat="champion in champion.champions.data">
-                <img ng-src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/champion/{{champion.id}}.png " alt="champion" />
+                <img ng-src="https://ddragon.leagueoflegends.com/cdn/6.24.1/img/champion/{{champion.id}}.png" alt="champion" />
             </div>
         </div>
 		</div>
