--- a/app/index.html
+++ b/app/index.html
@@ -54,10 +54,12 @@
         </div>
     </div>
 
-		<div  ng-controller="ChampionCtrl as champion" ng-show="tab.currentTab == 2">
+		<div ng-controller="ChampionCtrl as champCtrl" ng-show="tab.currentTab == 2">
         <div class="container"> 
-            <div class="champion-icon" ng-repeat="champion in champion.champions.data">
-                <img ng-src="https://ddragon.leagueoflegends.com/cdn/6.24.1/img/champion/{{champion.id}}.png" alt="champion" />
+            <div class="champion-icon" ng-repeat="champion in champCtrl.champions.data">
+                <a a href="#" ng-click="champCtrl.selectChampion(champion.key)">
+                                    <img class="half-size-icon" ng-src="https://ddragon.leagueoflegends.com/cdn/6.24.1/img/champion/{{champion.key}}.png" alt="champion" />
+                </a>
             </div>
         </div>
 		</div>
