--- a/app/index.html
+++ b/app/index.html
@@ -1,16 +1,17 @@
 <!doctype html>
 <html ng-app="leaderboardApp">
 <head>
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css" integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi" crossorigin="anonymous">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js" integrity="sha384-BLiI7JTZm+JWlgKa0M0kGRpJbF2J8q+qreVrKBC47e3K6BW78kGLrCkeRX6I9RoK" crossorigin="anonymous"></script>
     <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body ng-controller="TabCtrl as tab">
     <div>
-        <ul class="nav nav-pills nav-justified">
-            <li ng-class="{ active: tab.currentTab == 1 }"><a href="#" ng-click="tab.setTab(1)">Leaderboard</a></li>
-            <li ng-class="{ active: tab.currentTab == 2 }"><a href="#" ng-click="tab.setTab(2)">Champions</a></li>
-            <li ng-class="{ active: tab.currentTab == 3 }"><a href="#" ng-click="tab.setTab(3)">Items</a></li>
+        <ul class="nav nav-pills">
+            <li class="nav-item"><a class="nav-link" ng-class="{ active: tab.currentTab == 1 }" href="#" ng-click="tab.setTab(1)">Leaderboard</a></li>
+            <li class="nav-item"><a class="nav-link" ng-class="{ active: tab.currentTab == 2 }" href="#" ng-click="tab.setTab(2)">Champions</a></li>
+            <li class="nav-item"><a class="nav-link" ng-class="{ active: tab.currentTab == 3 }" href="#" ng-click="tab.setTab(3)">Items</a></li>
         </ul>
     </div>
     <div ng-controller="PlayerCtrl" ng-show="tab.currentTab == 1">
