--- a/app/index.html
+++ b/app/index.html
@@ -7,20 +7,24 @@
 </head>
 
 <body ng-controller="TabCtrl as tab">
-    <div>
+    <nav class="navbar navbar-light bg-faded">
+        <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse" data-target="#navbar-header" aria-controls="navbar-header" aria-expanded="false" aria-label="Toggle navigation"></button>
+        <div class="collapse navbar-toggleable-xs" id="navbar-header">
         <ul class="nav nav-pills">
             <li class="nav-item"><a class="nav-link" ng-class="{ active: tab.currentTab == 1 }" href="#" ng-click="tab.setTab(1)">Leaderboard</a></li>
             <li class="nav-item"><a class="nav-link" ng-class="{ active: tab.currentTab == 2 }" href="#" ng-click="tab.setTab(2)">Champions</a></li>
             <li class="nav-item"><a class="nav-link" ng-class="{ active: tab.currentTab == 3 }" href="#" ng-click="tab.setTab(3)">Items</a></li>
         </ul>
-    </div>
+        </div>
+      </nav> <!-- /navbar -->
+
     <div ng-controller="PlayerCtrl" ng-show="tab.currentTab == 1">
         <div class="container">
             <div class="row">
                 <div class="col-md-3">
                     <h1> Leaderboard </h1>
                     <img src="img/challenger_icon.png" />
-                    <input type="search" ng-model="search" placeholder="Search player">
+                        <input class="form-control" type="text" ng-model="search" placeholder="Search player">
                     <h4> Sort by: </h4>
                     <select ng-model="orderProp">
                         <option value="-leaguePoints">Points</option>
@@ -30,8 +34,8 @@
                     </select>
                 </div>
                 <div class="col-md-9 table-wraper">
-                    <table class="table table-striped table-bordered">
-                        <thead>
+                    <table class="table table-striped">
+                        <thead class="thead-inverse">
                             <tr>
                                 <th>Rank</th>
                                 <th>Player name</th>
