--- a/app/index.html
+++ b/app/index.html
@@ -6,10 +6,10 @@
 </head>
 
 <body ng-controller="TabCtrl as tab">
-    <nav class="navbar navbar-light bg-faded">
+    <nav class="navbar navbar-dark bg-inverse">
         <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse" data-target="#navbar-header" aria-controls="navbar-header" aria-expanded="false" aria-label="Toggle navigation"></button>
         <div class="collapse navbar-toggleable-xs" id="navbar-header">
-        <ul class="nav nav-pills">
+        <ul class="nav navbar-nav">
             <li class="nav-item"><a class="nav-link" ng-class="{ active: tab.currentTab == 1 }" href="#" ng-click="tab.setTab(1)">Leaderboard</a></li>
             <li class="nav-item"><a class="nav-link" ng-class="{ active: tab.currentTab == 2 }" href="#" ng-click="tab.setTab(2)">Champions</a></li>
             <li class="nav-item"><a class="nav-link" ng-class="{ active: tab.currentTab == 3 }" href="#" ng-click="tab.setTab(3)">Items</a></li>
