--- a/app/index.html
+++ b/app/index.html
@@ -7,15 +7,17 @@
 
     <body ng-controller="TabCtrl as tab">
         <nav class="navbar navbar-dark bg-inverse">
-            <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse" data-target="#navbar-header" aria-controls="navbar-header" aria-expanded="false" aria-label="Toggle navigation"></button>
-            <div class="collapse navbar-toggleable-xs" id="navbar-header">
-                <ul class="nav navbar-nav">
-                    <li class="nav-item"><a class="nav-link" ng-class="{ active: tab.currentTab == 1 }" href="#" ng-click="tab.setTab(1)">Leaderboard</a></li>
-                    <li class="nav-item"><a class="nav-link" ng-class="{ active: tab.currentTab == 2 }" href="#" ng-click="tab.setTab(2)">Champions</a></li>
-                    <li class="nav-item"><a class="nav-link" ng-class="{ active: tab.currentTab == 3 }" href="#" ng-click="tab.setTab(3)">Items</a></li>
-                </ul>
+            <div class="container" style="margin-top: 0;">
+                <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse" data-target="#navbar-header" aria-controls="navbar-header" aria-expanded="false" aria-label="Toggle navigation"></button>
+                <div class="collapse navbar-toggleable-xs" id="navbar-header">
+                    <ul class="nav navbar-nav">
+                        <li class="nav-item"><a class="nav-link" ng-class="{ active: tab.currentTab == 1 }" href="#" ng-click="tab.setTab(1)">Leaderboard</a></li>
+                        <li class="nav-item"><a class="nav-link" ng-class="{ active: tab.currentTab == 2 }" href="#" ng-click="tab.setTab(2)">Champions</a></li>
+                        <li class="nav-item"><a class="nav-link" ng-class="{ active: tab.currentTab == 3 }" href="#" ng-click="tab.setTab(3)">Items</a></li>
+                    </ul>
+                </div>
             </div>
-        </nav> <!-- /navbar -->
+        </nav>
 
         <div ng-controller="PlayerCtrl" ng-show="tab.currentTab == 1">
             <div class="container">
@@ -72,26 +74,59 @@
                     <button type="button" ng-click="champCtrl.unselectChampion()" class="btn btn-primary">back</button>
                 </div>
                 <div class="row">
-                    <div id="champion-info">
-                        <img id="champion-avatar" ng-src="http://ddragon.leagueoflegends.com/cdn/img/champion/loading/{{champCtrl.selectedChampion.name}}_0.jpg" alt="championSplash" />
+                    <div class="col-md-6 offset-md-3">
                         <span id="champion-name">{{champCtrl.selectedChampion.name}}</span>
                         <span id="champion-title"> - {{champCtrl.selectedChampion.title}}</span>
-                        <div id="champion-tags" ng-repeat="tag in champCtrl.selectedChampion.tags">
-                            <span class="tag tag-primary">{{tag}}</span>
+                    </div>
+                    <div id="champion-info">
+                        <div class="col-md-6 offset-md-3 white-block">
+                            <div class="col-md-4">
+                                <img id="champion-avatar" ng-src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/champion/{{champCtrl.selectedChampion.name}}.png" alt="championSplash" />
+                                <div>
+                                    <span class="tag tag-default" ng-repeat="tag in champCtrl.selectedChampion.tags" style="margin-right: 10px;">
+                                        {{tag}}
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="col-md-8">
+                                <div id="champion-info" ng-repeat="(key, value) in champCtrl.selectedChampion.info">
+                                    {{key}}
+                                    <progress class="progress" value={{value}} max="10" style="margin-bottom: 0;"></progress>
+                                </div>
+
+
+                            </div>
                         </div>
+                        <!--
+<div class="col-md-8">
+<span id="champion-name">{{champCtrl.selectedChampion.name}}</span>
+<span id="champion-title"> - {{champCtrl.selectedChampion.title}}</span>
+
+<span id="champion-tags" class="tag tag-primary" ng-repeat="tag in champCtrl.selectedChampion.tags">
+{{tag}}
+</span>
+
+<div class="col-md-6">
+Health:
+{{ champCtrl.selectedChampion.stats.hp }} (+{{champCtrl.selectedChampion.stats.hpperlevel}} per level)
+</div>
+<div class="col-md-6">
+Attack Damage:
+{{ champCtrl.selectedChampion.stats.attackdamage }}  (+{{champCtrl.selectedChampion.stats.attackdamageperlevel}} per level)
+</div>
+</div>
+-->
                     </div>
                 </div>
-                <div class="row">
-                    <h1> Skins </h1>
+                <h1> Skins </h1>
+                <div class="row white-block">
                     <div id="skins" class="col-md-2" ng-repeat="skin in champCtrl.selectedChampion.skins">
                         <img id="champion-splash" ng-src="https://ddragon.leagueoflegends.com/cdn/img/champion/loading/{{champCtrl.selectedChampion.name}}_{{skin.num}}.jpg" alt="champion-splash" />
-                        <h5>{{skin.name}}</h5>
+                        <h6>{{skin.name}}</h6>
                     </div>
                 </div>
             </div>
         </div>
-
-
 
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
         <script src="js/app.js"></script>
@@ -99,7 +134,6 @@
         <script src="js/playerController.js"></script>
         <script src="js/championController.js"></script>
         <script src="js/service.js"></script>
-
     </body>
 </html>
 
