--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,7 @@
             </div>
         </nav>
 
-        <div ng-controller="PlayerCtrl" ng-show="tab.currentTab == 1">
+        <div ng-controller="PlayerCtrl as player" ng-show="tab.currentTab == 1">
             <div class="container">
                 <div class="row">
                     <div class="col-md-3">
@@ -27,7 +27,7 @@
                         <img src="img/challenger_icon.png" />
                         <input class="form-control" type="text" ng-model="search" placeholder="Search player">
                         <h4> Sort by: </h4>
-                        <select ng-model="orderProp">
+                        <select ng-model="player.orderProp">
                             <option value="-leaguePoints">Points</option>
                             <option value="-wins">Wins</option>
                             <option value="-losses">Losses</option>
@@ -46,7 +46,7 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr ng-repeat="player in players | orderBy:orderProp | filter:search | limitTo:50">
+                                <tr ng-repeat="player in player.players | orderBy:player.orderProp | filter:search | limitTo:50">
                                     <td>{{$index+1}}</td>
                                     <td>{{player.playerOrTeamName}}</td>
                                     <td id="wins">{{player.wins}}</td>
