remove rank when user changed sort prop to keep it correct

--- a/app/index.html
+++ b/app/index.html
@@ -38,7 +38,7 @@
                         <table class="table table-striped">
                             <thead class="thead-inverse">
                                 <tr>
-                                    <th>Rank</th>
+                                    <th ng-if="playerCtrl.orderProp == '-leaguePoints'">Rank</th>
                                     <th>Player name</th>
                                     <th>Wins</th>
                                     <th>Losses</th>
@@ -47,7 +47,7 @@
                             </thead>
                             <tbody>
                                 <tr ng-repeat="player in playerCtrl.players | orderBy:playerCtrl.orderProp | filter:search | limitTo:50">
-                                    <td>{{$index+1}}</td>
+                                    <td ng-if="playerCtrl.orderProp == '-leaguePoints'">{{$index+1}}</td>
                                     <td>
                                         <a a href="#" ng-click="playerCtrl.selectPlayer(player.playerOrTeamId)">
                                         {{player.playerOrTeamName}}
