--- a/app/index.html
+++ b/app/index.html
@@ -35,7 +35,7 @@
                         </select>
                     </div>
                     <div class="col-md-9 table-wraper">
-                        <table class="table table-striped">
+                        <table class="table table-striped table-bordered">
                             <thead class="thead-inverse">
                                 <tr>
                                     <th ng-if="playerCtrl.orderProp == '-leaguePoints'">Rank</th>
@@ -49,7 +49,7 @@
                                 <tr ng-repeat="player in playerCtrl.players | orderBy:playerCtrl.orderProp | filter:search | limitTo:50">
                                     <td ng-if="playerCtrl.orderProp == '-leaguePoints'">{{$index+1}}</td>
                                     <td>
-                                        <a a href="#" ng-click="playerCtrl.selectPlayer(player.playerOrTeamId)">
+                                        <a a href="#" ng-click="playerCtrl.selectPlayer(player)">
                                             {{player.playerOrTeamName}}
                                         </a>
                                     </td>
@@ -67,11 +67,12 @@
                 <div class="col-md-2">
                     <div class="row" style="margin-bottom: 30px">
                         <button type="button" ng-click="playerCtrl.unselectPlayer()" class="btn btn-primary">back</button>
+                        {{playerCtrl.playerName}}
                     </div>
                 </div>
 
                 <div class="col-md-10 table-wraper">
-                    <table class="table table-striped">
+                    <table class="table table-striped table-bordered">
                         <thead class="thead-inverse">
                             <tr>
                                 <th>Icon</th>
