--- a/app/index.html
+++ b/app/index.html
@@ -46,7 +46,7 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr ng-repeat="player in playerCtrl.players | orderBy:playerCtrl.orderProp | filter:search | limitTo:50">
+                                <tr ng-repeat="player in playerCtrl.players | orderBy:playerCtrl.orderProp | filter:search">
                                     <td ng-if="playerCtrl.orderProp == '-leaguePoints'">{{$index+1}}</td>
                                     <td>
                                         <a a href="#" ng-click="playerCtrl.selectPlayer(player)">
