--- a/app/index.html
+++ b/app/index.html
@@ -93,7 +93,8 @@
                         </thead>
                         <tbody>
                             <tr ng-repeat="champion in playerCtrl.champions | orderBy:'-stats.totalSessionsPlayed'">
-                                <td ng-if="champion.id !== 0"> <img class="half-size-icon" ng-src="https://ddragon.leagueoflegends.com/cdn/6.24.1/img/champion/{{playerCtrl.championMap[champion.id]}}.png" alt="championIcon" />
+                                <td ng-if="champion.id !== 0"> 
+                                    <img class="half-size-icon" ng-src="https://ddragon.leagueoflegends.com/cdn/6.24.1/img/champion/{{playerCtrl.championMap[champion.id]}}.png" alt="championIcon" />
                                 </td>
                                 <td ng-if="champion.id !== 0">{{playerCtrl.championMap[champion.id]}}</td>
                                 <td ng-if="champion.id !== 0">{{champion.stats.totalChampionKills}}</td>
@@ -111,11 +112,22 @@
         </div>
 
         <div ng-controller="ChampionCtrl as champCtrl" ng-show="tab.currentTab == 2">
-            <div class="container" ng-hide="champCtrl.champSelected"> 
-                <div class="champion-icon" ng-repeat="champion in champCtrl.champions.data">
-                    <a a href="#" ng-click="champCtrl.selectChampion(champion.id)">
-                        <img class="half-size-icon" ng-src="https://ddragon.leagueoflegends.com/cdn/6.24.1/img/champion/{{champion.key}}.png" alt="championIcon" />
-                    </a>
+            <div class="container" ng-hide="champCtrl.champSelected">
+                <input class="form-control" type="text" ng-model="search" placeholder="Search champion">
+                <br>
+                <div class="champion-icon" ng-repeat="champion in champCtrl.championsArray | filter: search">
+                    <table class="table" style="table-layout: fixed; width: 120px;">
+                        <tbody>
+                            <td style="border: none;">
+                                <a href="#" ng-click="champCtrl.selectChampion(champion.id)">
+                                    <img class="half-size-icon" ng-src="https://ddragon.leagueoflegends.com/cdn/6.24.1/img/champion/{{champion.key}}.png" alt="championIcon" />
+                                </a>
+                                <a href="#" ng-click="champCtrl.selectChampion(champion.id)">
+                                    <h6>{{champion.name}}</h6>
+                                </a>
+                            </td>
+                        </tbody>
+                    </table>
                 </div>
             </div>
 
