--- a/app/index.html
+++ b/app/index.html
@@ -145,13 +145,13 @@
                             <div class="col-md-4">
                                 <img id="champion-avatar" ng-src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/champion/{{champCtrl.selectedChampion.key}}.png" alt="championSplash" />
                                 <div>
-                                    <span class="tag tag-default" ng-repeat="tag in champCtrl.selectedChampion.tags" style="margin-right: 10px;">
+                                    <span class="tag tag-danger" ng-repeat="tag in champCtrl.selectedChampion.tags" style="margin-right: 10px;">
                                         {{tag}}
                                     </span>
                                 </div>
                             </div>
                             <div class="col-md-8">
-                                <div id="champion-info" ng-repeat="(key, value) in champCtrl.selectedChampion.info">
+                                <div id="champion-info" style="font-weight: bold;"ng-repeat="(key, value) in champCtrl.selectedChampion.info">
                                     {{key}}
                                     <progress class="progress" value={{value}} max="10" style="margin-bottom: 0;"></progress>
                                 </div>
